--- a/src/style.css
+++ b/src/style.css
@@ -1316,7 +1316,7 @@ textarea {
 
 .animated-text {
     display: inline-block;
-    animation: slideIn 2s ease-in-out;
+    animation: slideIn 2s ease-in-out infinite;
 }
 
 @keyframes slideIn {
