--- a/src/style.css
+++ b/src/style.css
@@ -521,7 +521,7 @@ textarea {
 }
 
 .sort-button {
-    background-color: #0d6efd;
+    background-color: #ccc;
     color: white;
     padding: 10px 20px;
     border: none;
