--- a/src/style.css
+++ b/src/style.css
@@ -42,12 +42,17 @@
 
 .custom-table th:nth-child(2),
 .custom-table td:nth-child(2) {
-    width: 30%;
+    width: 20%;
 }
 
 .custom-table th:nth-child(3),
 .custom-table td:nth-child(3) {
     width: 20%;
+}
+
+.custom-table th:nth-child(4),
+.custom-table td:nth-child(4) {
+    width: 40%;
 }
 
 
