--- a/src/style.css
+++ b/src/style.css
@@ -419,7 +419,7 @@ textarea {
 }
 
 .playlist-container:hover .playlist-name {
-    color: #0d6efd;
+    color: #333;
     transform: scale(1.1);
 
 }
