--- a/src/style.css
+++ b/src/style.css
@@ -405,6 +405,10 @@ textarea {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
+.playlist-container:hover .collection_name {
+    color: #0d6efd;
+}
+
 .collection_name {
     transition: text-decoration 0.3s, color 0.3s;
 }
@@ -414,11 +418,7 @@ textarea {
     padding-top: 20px;
 }
 
-.playlist-container:hover .playlist-name {
-    color: #0d6efd;
-    transform: scale(1.1);
 
-}
 
 .playlist-name-modal {
     transition: color 0.3s;
