--- a/src/style.css
+++ b/src/style.css
@@ -418,7 +418,11 @@ textarea {
     padding-top: 20px;
 }
 
+.playlist-container:hover .playlist-name {
+    color: #0d6efd;
+    transform: scale(1.1);
 
+}
 
 .playlist-name-modal {
     transition: color 0.3s;
