--- a/src/style.css
+++ b/src/style.css
@@ -426,7 +426,7 @@ textarea {
 .playlist-name-modal {
     transition: color 0.3s;
     padding-top: 10px;
-    color: #0d6efd;
+    color: black;
 }
 
 .playlist-container:hover .playlist-name-modal {
